# whisper-candle

./: .gitignore  Cargo.toml  DESIGN.md  README.md  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
crates/whisper-cli/: CHANGELOG.md  Cargo.toml
crates/whisper-cli/src/: main.rs
crates/whisper-core/: CHANGELOG.md  Cargo.toml
crates/whisper-core/examples/: profile.rs
crates/whisper-core/src/: audio.rs  decode.rs  hub.rs  lib.rs  model.rs  nn.rs  quantize.rs  timing.rs  tokenizer.rs  transcribe.rs  utils.rs  writers.rs
crates/whisper-core/tests/: audio_goldens.rs  misc_goldens.rs  model_goldens.rs  timestamp_rules_goldens.rs  timing_goldens.rs  tokenizer_goldens.rs
crates/whisper-core/tests/common/: mod.rs
tests/fixtures/: audio_jfk_pcm.npy  bench_python.json  bench_python_mps.json  decode_goldens_base.json  decode_goldens_tiny.json  dtw_medfilt_goldens.npz  encoder_out_tiny.npy  logits_sot_tiny.npy  mel_filters.npz  mel_jfk.npy  mel_jfk_padded_3000.npy  misc_goldens.json  timestamp_rules_goldens.npz  timestamp_rules_meta.json  tokenizer_goldens.json
tools/: bench_python.py  gen_fixtures.py
