[package]
name = "whisper-candle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for whisper-candle-core"

[[bin]]
name = "whisper-candle"
path = "src/main.rs"

[dependencies]
whisper-candle-core = { path = "../whisper-core" }
candle-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[features]
default = []
accelerate = ["whisper-candle-core/accelerate"]
metal = ["whisper-candle-core/metal"]
cuda = ["whisper-candle-core/cuda"]
