[package]
name = "whisper-candle-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Native Whisper transcription CLI on candle — no Python, no PyTorch, no C/C++ bindings"
readme = "../../README.md"
keywords = ["whisper", "speech-to-text", "asr", "candle", "transcription"]
categories = ["multimedia::audio", "command-line-utilities"]

[[bin]]
name = "whisper-candle"
path = "src/main.rs"

[dependencies]
whisper-candle-core = { path = "../whisper-core", version = "0.1.2" }
candle-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
indicatif = { workspace = true }

[features]
default = []
accelerate = ["whisper-candle-core/accelerate"]
metal = ["whisper-candle-core/metal"]
cuda = ["whisper-candle-core/cuda"]
