[package]
name = "whisper-candle-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure-Rust OpenAI Whisper inference on candle — no Python, no PyTorch, no C/C++ bindings"
readme = "../../README.md"
keywords = ["whisper", "speech-to-text", "asr", "candle", "transcription"]
categories = ["multimedia::audio", "science"]

[lib]
name = "whisper_core"
path = "src/lib.rs"

[dependencies]
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
tiktoken-rs = { workspace = true }
rustc-hash = { workspace = true }
realfft = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
hf-hub = { workspace = true }
flate2 = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
